Compute logicalSize taking into account current config

BUG: 441417