kcm/output_model.cpp
@@ -161,10 +161,13 @@ bool OutputModel::setData(const QModelIndex &index, const QVariant &value, int r
         bool ok;
         const qreal scale = value.toReal(&ok);
         if (ok && !qFuzzyCompare(output.ptr->scale(), scale)) {
-            const auto oldSize = output.ptr->logicalSize().toSize();
+            const auto oldSize = output.ptr->explicitLogicalSize().toSize();
+
             output.ptr->setScale(scale);
             m_config->setScale(output.ptr, scale);
-            const auto newSize = output.ptr->logicalSize().toSize();
+
+            const auto newSize = m_config->config()->logicalSizeForOutput(*output.ptr).toSize();
+            output.ptr->setExplicitLogicalSize(newSize);
 
             maintainSnapping(output, oldSize, newSize);
 
@@ -385,9 +388,11 @@ bool OutputModel::setResolution(int outputIndex, int resIndex)
     if (output.ptr->currentModeId() == id) {
         return false;
     }
-    const auto oldSize = output.ptr->logicalSize().toSize();
+    const auto oldSize = output.ptr->explicitLogicalSize().toSize();
     output.ptr->setCurrentModeId(id);
-    const auto newSize = output.ptr->logicalSize().toSize();
+
+    const auto newSize = m_config->config()->logicalSizeForOutput(*output.ptr).toSize();
+    output.ptr->setExplicitLogicalSize(newSize);
 
     maintainSnapping(output, oldSize, newSize);
 
@@ -466,9 +471,11 @@ bool OutputModel::setRotation(int outputIndex, KScreen::Output::Rotation rotatio
     if (output.ptr->rotation() == rotation) {
         return false;
     }
-    const auto oldSize = output.ptr->logicalSize().toSize();
+    const auto oldSize = output.ptr->explicitLogicalSize().toSize();
     output.ptr->setRotation(rotation);
-    const auto newSize = output.ptr->logicalSize().toSize();
+
+    const auto newSize = m_config->config()->logicalSizeForOutput(*output.ptr).toSize();
+    output.ptr->setExplicitLogicalSize(newSize);
 
     maintainSnapping(output, oldSize, newSize);
 
@@ -653,7 +660,7 @@ bool OutputModel::setReplicationSourceIndex(int outputIndex, int sourceIndex)
             return false;
         }
         m_config->setReplicationSource(output.ptr, nullptr);
-        output.ptr->setLogicalSize(QSizeF());
+        output.ptr->setExplicitLogicalSize(QSizeF());
         resetPosition(output);
     } else {
         const auto source = m_outputs[sourceIndex].ptr;
@@ -664,7 +671,7 @@ bool OutputModel::setReplicationSourceIndex(int outputIndex, int sourceIndex)
         m_config->setReplicationSource(output.ptr, source);
         output.posReset = output.ptr->pos();
         output.ptr->setPos(source->pos());
-        output.ptr->setLogicalSize(source->logicalSize());
+        output.ptr->setExplicitLogicalSize(m_config->config()->logicalSizeForOutput(*source));
     }
 
     reposition();
